Prevent gap making space-evenly look weird

--- a/live-examples/css-examples/box-alignment/justify-content.css
+++ b/live-examples/css-examples/box-alignment/justify-content.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 60px 60px;
   grid-auto-rows: 40px;
-  grid-gap: 10px;
+  row-gap: 10px;
 }
 
 #example-element > div {
